@@ -76,6 +76,8 @@
 48. Fix invalid covers showing for online services.
 49. For Qt builds, if shortcut is set to default then remove entry from config
     file.
+50. Don't show page shortcuts in tooltips, as tooltip is not updated when
+    shortcut is changed.
 
 1.0.3
 -----
